<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/bg_Color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/bg_Color"
        android:elevation="6dp">

        <ImageView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_next"
            android:rotation="180"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_settings"
            android:text="Settings"
            android:drawableTint="@color/black"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/videoCapturing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/white"
                    android:text="Video Capturing"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
                <TextView
                    android:text="@string/videocapturing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/imageCapturing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/white"
                    android:text="Image Capturing"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
                <TextView
                    android:text="@string/image_capturing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/liveAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/white"
                    android:text="Live Alert"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
                <TextView
                    android:text="@string/live_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/noisySound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/white"
                    android:text="Noisy Sound"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
                <TextView
                    android:text="@string/noisy_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/audioRecording"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/white"
                    android:text="Audio Recording"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
                <TextView
                    android:text="@string/audio_recording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/aiAssistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/white"
                    android:text="AI Assistance"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
                <TextView
                    android:text="@string/ai_assistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>